Write frame for Work page

--- a/work.html
+++ b/work.html
@@ -12,9 +12,28 @@
   <button class="work"><a href="work.html"> WORK </a></button>
  </div>
 <body>
-
+ <div align="center">
+ <div class="image1">
+  <img src="citi_marketing.png" width="579px" height="579px">
+ </div>
+ <div class="image2" >
+  <img src="g.png" width="250px" height="250px">
+ </div>
+ <div class="image3">
+  <img src="citi_signon.png" width="579px" height="579px">
+ </div>
+ <div class="image4">
+  <img src="stacys.png" width="250px" height="250px">
+ </div>
+ <div class="image5">
+  <img src="popcorn.png" width="250px" height="250px">
+ </div>
+ <div class="image6">
+  <img src="digital_art_intro.png" width="250px" height="250px">
+ </div>
 <div class="footer">
  <p >&copy; av.com</p>
+</div>
 </div>
 </body>
 </html>
