Initial Desktop mode implementation with no sizing

--- a/work.html
+++ b/work.html
@@ -12,28 +12,44 @@
   <button class="work"><a href="work.html"> WORK </a></button>
  </div>
 <body>
- <div align="center">
+ <div class="caption1">CAT - SIGN ON</div>
  <div class="image1">
   <img src="citi_marketing.png" width="579px" height="579px">
  </div>
+ <div class="caption2">THE GEMINI SOCIETY</div>
  <div class="image2" >
   <img src="g.png" width="250px" height="250px">
  </div>
+ <div class="caption3">CITI - SIGN ON</div>
  <div class="image3">
   <img src="citi_signon.png" width="579px" height="579px">
  </div>
+ <div class="caption4">STACY'S</div>
  <div class="image4">
   <img src="stacys.png" width="250px" height="250px">
  </div>
+ <div class="caption5">POPWORKS</div>
  <div class="image5">
   <img src="popcorn.png" width="250px" height="250px">
  </div>
+ <div class="caption6">UI EXPLORATION</div>
  <div class="image6">
   <img src="digital_art_intro.png" width="250px" height="250px">
  </div>
+ <div id="letstalk">LET'S TALK&excl;</div>
+ <button class="connectbuttonlinkedinwork">
+  <a href="https://www.linkedin.com/in/alena-ilchenko-162033105/">
+  <img src="linkedin.png" width="60px" height="60px">
+  </a>
+ </button>
+ <button class="connectbuttonemailwork">
+  <a href="mailto: alenauiux@gmail.com">
+  <img src="email.png" width="60px" height="60px">
+  </a>
+ </button>
+<br><br><br><br><br><br><br><br>
 <div class="footer">
- <p >&copy; av.com</p>
-</div>
+ <p >&copy;av.com</p>
 </div>
 </body>
 </html>
