Start working on Grid layout

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
  <link rel="stylesheet" href="avstyle.css">
 </head>
+<div class="parent-center">
  <div class="header">
   <div id="logo"> AV </div>
   <button class="mystory"><a href="index.html"> MY STORY </a></button>
   <button class="work"><a href="work.html"> WORK </a></button>
  </div>
 <body>
- <p id="caption"> MY STORY </p>
+
+ <p id="caption">MY&nbsp;STORY</p>
  <div class="verticalline"></div>
  <img class="designerphoto" src="sampleimage.png">
  <div class="mainstorytext">
@@ -37,5 +39,6 @@
    <img src="email.png" width="30px" height="30px">
    </a>
   </button>
+</div>
 </body>
 </html>
