--- a/work.html
+++ b/work.html
@@ -6,8 +6,9 @@
  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald">
  <link rel="stylesheet" href="avstyle.css">
 </head>
+<div id="parent-center">
  <div class="header">
-  <div id="logo"> AV </div>
+  <div class="logo"> AV </div>
   <button class="mystory"><a href="index.html"> MY STORY </a></button>
   <button class="work"><a href="work.html"> WORK </a></button>
  </div>
@@ -36,7 +37,7 @@
  <div class="image6">
   <img src="digital_art_intro.png" width="250px" height="250px">
  </div>
- <div id="letstalk">LET'S TALK&excl;</div>
+ <div class="letstalk">LET'S TALK&excl;</div>
  <button class="connectbuttonlinkedinwork">
   <a href="https://www.linkedin.com/in/alena-ilchenko-162033105/">
   <img src="linkedin.png" width="60px" height="60px">
@@ -50,6 +51,7 @@
 <br><br><br><br><br><br><br><br>
 <div class="footer">
  <p >&copy;av.com</p>
+</div>
 </div>
 </body>
 </html>
